--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,48 +1,97 @@
-.contacts {
-  display: flex;
-  align-items: center;
-}
-
-.contacts__item {
-  &:not(:last-child) {
-    margin-right: 50px;
+// 768+
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: flex;
+    align-items: center;
   }
-}
 
-.contacts__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 500;
+  .contacts__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
 
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-color);
-  transition: color var(--animation-duration) var(--animation-timing-function);
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+    transition: color var(--animation-duration) var(--animation-timing-function);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-    outline: none;
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+      outline: none;
+    }
   }
-}
 
-.contacts__icon {
-  fill: currentColor;
-
-  .contacts__link:hover &,
-  .contacts__link:focus & {
+  .contacts__icon {
     fill: currentColor;
+
+    .contacts__link:hover &,
+    .contacts__link:focus & {
+      fill: currentColor;
+    }
+  }
+}
+
+//  768 - 1199
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts {
+    flex-direction: column;
+    align-items: flex-start;
+
+    &__item {
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+
+    &__link {
+      font-size: 12px;
+      line-height: 1.17;
+    }
   }
 
-  &_mail {
-    width: 16px;
-    height: 12px;
+  .contacts__icon {
+    fill: currentColor;
+
+    .contacts__link:hover &,
+    .contacts__link:focus & {
+      fill: currentColor;
+    }
+
+    &_mail {
+      width: 14px;
+      height: 10px;
+    }
+
+    &_call {
+      width: 10px;
+      height: 14px;
+    }
+  }
+}
+
+// 1200+
+@media screen and (min-width: 1200px) {
+  .contacts__item {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+
+    &__link {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 
-  &_call {
-    width: 10px;
-    height: 16px;
+  .contacts__icon {
+    &_mail {
+      width: 16px;
+      height: 12px;
+    }
+
+    &_call {
+      width: 10px;
+      height: 16px;
+    }
   }
 }
