--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,40 +1,51 @@
-.menu {
-  display: flex;
-
-  &__item {
-    &:not(:last-child) {
-      margin-right: 50px;
-    }
+// 480 - 767
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
   }
+}
 
-  &__link {
-    position: relative;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--main-color);
-    transition: color var(--animation-duration) var(--animation-timing-function);
+// 768+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
 
-    &:hover,
-    &:focus {
+    &__item {
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
+    }
+
+    &__link {
+      position: relative;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      color: var(--main-color);
+      transition: color var(--animation-duration) var(--animation-timing-function);
+
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+        outline: none;
+      }
+    }
+
+    &__link_current {
       color: var(--accent-color);
-      outline: none;
-    }
-  }
 
-  &__link_current {
-    color: var(--accent-color);
-
-    &::after {
-      content: '';
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 4px;
-      background-color: var(--accent-color);
-      border-radius: 2px;
-      margin-top: 28px;
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: -33px;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+        // margin-top: 28px;
+      }
     }
   }
 }
