--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@
   }
 }
 
-.benefits__title, .projects__title {
+.modal-footer__title, .benefits__title, .projects__title, .footer__title {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -411,10 +411,6 @@ body {
   font-style: normal;
 }
 
-.address__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
 .address__link {
   font-style: normal;
   font-size: 14px;
@@ -434,6 +430,18 @@ body {
 .address__link:hover, .address__link:focus {
   color: var(--accent-color);
   outline: none;
+}
+
+@media screen and (max-width: 1199px) {
+  .address__item:not(:last-child) {
+    margin-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .modal-btn {
@@ -657,6 +665,98 @@ body {
   outline: none;
 }
 
+.modal-footer {
+  display: flex;
+}
+
+.modal-footer__title {
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  color: var(--contrast-color);
+}
+
+.modal-footer__input-wrapper {
+  margin-top: 20px;
+}
+
+.modal-footer__input {
+  height: 50px;
+  color: var(--contrast-color);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px;
+  transition: border-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.modal-footer__input:hover, .modal-footer__input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-footer__btn {
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--contrast-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 10px 28px;
+  margin: 0 auto;
+  transition: box-shadow var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.modal-footer__btn:hover, .modal-footer__btn:focus {
+  background-color: #188ce8;
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.15);
+}
+
+.modal-footer__icon {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  fill: var(--contrast-color);
+}
+
+@media screen and (max-width: 767px) {
+  .modal-footer__input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .modal-footer__input {
+    margin-bottom: 20px;
+  }
+  .modal-footer {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .modal-footer__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-footer__title {
+    align-items: flex-end;
+  }
+  .modal-footer__input-wrapper {
+    display: flex;
+  }
+  .modal-footer__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
 .header {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -740,12 +840,24 @@ body {
 
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--contrast-color);
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1199px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.6;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .benefits {
@@ -1032,6 +1144,68 @@ body {
   }
   .clients__link {
     width: 170px;
+  }
+}
+
+.footer {
+  background-color: var(--background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer__logo {
+  margin-bottom: 20px;
+}
+
+.footer__title {
+  font-weight: 700;
+  color: var(--contrast-color);
+  margin-bottom: 20px;
+}
+
+.footer__social-media {
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__address {
+    margin-bottom: 60px;
+  }
+  .footer__social-media {
+    margin-bottom: 60px;
+  }
+  .footer__list {
+    width: 206px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .footer__form {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    justify-content: space-between;
   }
 }
 
