--- a/sass/components/_modal-footer.scss
+++ b/sass/components/_modal-footer.scss
@@ -1,64 +1,104 @@
-// .modal-footer {
-//   display: flex;
-//   align-items: flex-end;
+.modal-footer {
+  display: flex;
 
-//   &__title {
-//     display: flex;
-//     flex-direction: column;
-//     @extend %title;
-//     font-weight: 700;
-//     color: var(--contrast-color);
-//   }
+  &__title {
+    display: flex;
+    flex-direction: column;
+    @extend %title;
+    font-weight: 700;
+    color: var(--contrast-color);
+  }
 
-//   &__input-wrapper {
-//     display: flex;
-//     margin-top: 20px;
-//   }
-// }
+  &__input-wrapper {
+    margin-top: 20px;
+  }
+}
 
-// .modal-footer__input {
-//   width: 358px;
-//   height: 50px;
-//   color: var(--contrast-color);
-//   background-color: transparent;
-//   border: 1px solid rgba(255, 255, 255, 0.3);
-//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-//   border-radius: 4px;
-//   padding: 15px;
-//   margin-right: 12px;
-//   transition: border-color var(--animation-duration) var(--animation-timing-function);
+.modal-footer__input {
+  height: 50px;
+  color: var(--contrast-color);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px;
+  transition: border-color var(--animation-duration) var(--animation-timing-function);
 
-//   &:hover,
-//   &:focus {
-//     outline: none;
-//     border-color: var(--accent-color);
-//   }
-// }
+  &:hover,
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
+}
 
-// .modal-footer__btn {
-//   height: 50px;
-//   font-weight: 700;
-//   font-size: 16px;
-//   line-height: 1.88;
-//   text-align: center;
-//   letter-spacing: 0.06em;
-//   color: var(--contrast-color);
-//   background-color: var(--accent-color);
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//   padding: 10px 28px;
-//   transition: box-shadow var(--animation-duration) var(--animation-timing-function),
-//     background-color var(--animation-duration) var(--animation-timing-function);
+.modal-footer__btn {
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--contrast-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 10px 28px;
+  margin: 0 auto;
+  transition: box-shadow var(--animation-duration) var(--animation-timing-function),
+    background-color var(--animation-duration) var(--animation-timing-function);
 
-//   &:hover,
-//   &:focus {
-//     background-color: #188ce8;
-//     box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.15);
-//   }
-// }
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+    box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.15);
+  }
+}
 
-// .modal-footer__icon {
-//   width: 24px;
-//   height: 24px;
-//   vertical-align: middle;
-//   fill: var(--contrast-color);
-// }
+.modal-footer__icon {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  fill: var(--contrast-color);
+}
+
+// 0 - 767
+@media screen and (max-width: 767px) {
+  .modal-footer__input {
+    width: 100%;
+  }
+}
+
+// 0 - 1199
+@media screen and (max-width: 1199px) {
+  .modal-footer__input {
+    margin-bottom: 20px;
+  }
+
+  .modal-footer {
+    flex-direction: column;
+  }
+}
+
+// 768 - 1199
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .modal-footer__input {
+    width: 450px;
+  }
+}
+
+// 1200+
+@media screen and (min-width: 1200px) {
+  .modal-footer {
+    &__title {
+      align-items: flex-end;
+    }
+
+    &__input-wrapper {
+      display: flex;
+    }
+  }
+
+  .modal-footer__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
