Готово модальное окно

--- a/css/main.css
+++ b/css/main.css
@@ -483,13 +483,39 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scaleY(1);
-  min-width: 528px;
-  min-height: 582px;
   background-color: var(--contrast-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
   transition: transform var(--animation-duration) var(--animation-timing-function);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    min-width: 450px;
+    min-height: 610px;
+  }
+  .modal__header {
+    line-height: 1.5;
+  }
+  .modal__policy-title {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 582px;
+  }
+  .modal__header {
+    line-height: 1.15;
+  }
+  .modal__policy-title {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .is-hidden .modal {
@@ -528,11 +554,10 @@ body {
 .modal__header {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color) #212121;
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 }
 
 .modal__field {
@@ -614,8 +639,6 @@ body {
 }
 
 .modal__policy-title {
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
