--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -12,10 +12,10 @@
     border-radius: 0px 0px 4px 4px;
   }
 
-  &__img {
-    width: 450px;
-    height: 460px;
-  }
+  // &__img {
+  //   width: 450px;
+  //   height: 460px;
+  // }
 
   &__wrapper {
     padding-top: 30px;
@@ -56,10 +56,10 @@
 // 768+
 @media screen and (min-width: 768px) {
   .team {
-    &__img {
-      width: 354px;
-      height: 374px;
-    }
+    // &__img {
+    //   width: 354px;
+    //   height: 374px;
+    // }
 
     &__wrapper {
       padding-right: 74px;
@@ -92,10 +92,10 @@
       flex-basis: calc((100% - 120px) / 4);
     }
 
-    &__img {
-      width: 270px;
-      height: 260px;
-    }
+    // &__img {
+    //   width: 270px;
+    //   height: 260px;
+    // }
 
     &__wrapper {
       padding: 30px 32px;
