--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -9,11 +9,11 @@
     flex-wrap: wrap;
   }
 
-  &__item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  // &__item {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 }
 
 .clients__link {
