--- a/css/main.css
+++ b/css/main.css
@@ -941,6 +941,12 @@ body {
   color: var(--secondary-color);
 }
 
+@media screen and (max-width: 767px) {
+  .benefits__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .benefits__list {
     display: flex;
@@ -957,12 +963,6 @@ body {
     flex-basis: calc((100% - 60px) / 2);
     margin-top: 30px;
     margin-left: 30px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .benefits__description {
-    margin-bottom: 30px;
   }
 }
 
@@ -1062,7 +1062,7 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .team__item {
+  .team__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
@@ -1104,12 +1104,6 @@ body {
 .clients__list {
   display: flex;
   flex-wrap: wrap;
-}
-
-.clients__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .clients__link {
